--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,8 +48,8 @@ services:
     container_name: postgres_db
     restart: unless-stopped
     environment:
-      POSTGRES_DB: laravel
-      POSTGRES_USER: laravel
+      POSTGRES_DB: teleshtorm_db
+      POSTGRES_USER: admin
       POSTGRES_PASSWORD: secret
     volumes:
       - pgdata:/var/lib/postgresql/data
@@ -57,6 +57,24 @@ services:
       - "5432:5432"
     networks:
       - app-network
+
+  mysql:
+    image: mysql:5.7
+    container_name: mysql_db
+    platform: linux/amd64
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: root_secret
+      MYSQL_DATABASE: laravel_mysql
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: secret
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysqldata:/var/lib/mysql
+    networks:
+      - app-network
+
 
   redis:
     image: redis:latest
@@ -80,6 +98,7 @@ services:
 
 volumes:
   pgdata:
+  mysqldata:
 
 networks:
   app-network:
